--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,7 @@
         android:orientation="vertical">
 
         <!-- Custom Search Bar -->
-        <include
-            layout="@layout/search_bar"
+        <com.example.proyekakhirpam.SearchBar
             android:layout_width="match_parent"
             android:layout_height="60dp" />
 
