update form postingan

--- a/app/src/main/res/layout/activity_form_postingan.xml
+++ b/app/src/main/res/layout/activity_form_postingan.xml
@@ -69,6 +69,7 @@
                     android:visibility="gone" />
 
                 <ImageView
+                    android:id="@+id/iconUpload"
                     android:src="@drawable/bg_upload_foto"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -76,6 +77,7 @@
                     android:layout_marginTop="24dp"/>
 
                 <TextView
+                    android:id="@+id/textUpload"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
