--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,28 +101,15 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/buat_akun"
+        android:id="@+id/register_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sudah memiliki akun? Masuk"
+        android:text="Belum memiliki akun? Daftar"
         android:textSize="12sp"
         android:textStyle="normal"
-        android:textColor="@color/light_blue"
+        android:textColor="@color/tosca"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
-    <TextView
-        android:id="@+id/lanjut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Atau lanjutkan menggunakan"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        android:textColor="@color/light_blue"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="@id/buat_akun"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
