--- a/app/src/main/res/layout/activity_donate_payment.xml
+++ b/app/src/main/res/layout/activity_donate_payment.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DonatePayment">
+    tools:context=".DonatePayment"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/img_main"
@@ -57,6 +58,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/light_grey_text"
             android:text="Rp. 10.000"
+            android:textColor="@color/white"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/tv_nominal_btns"/>
         <Button
@@ -69,6 +71,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/light_grey_text"
             android:text="Rp. 25.000"
+            android:textColor="@color/white"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/btn_donate_10"/>
         <Button
@@ -81,6 +84,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/light_grey_text"
             android:text="Rp. 50.000"
+            android:textColor="@color/white"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/btn_donate_25"/>
         <Button
@@ -93,6 +97,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/light_grey_text"
             android:text="Rp. 100.000"
+            android:textColor="@color/white"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/btn_donate_50"/>
         <Button
@@ -105,6 +110,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/light_grey_text"
             android:text="Rp. 150.000"
+            android:textColor="@color/white"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/btn_donate_100"/>
 
@@ -146,6 +152,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/orange"
         android:text="Bayar"
+        android:textColor="@color/white"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
