--- a/app/src/main/res/layout/item_donation.xml
+++ b/app/src/main/res/layout/item_donation.xml
@@ -6,12 +6,14 @@
     android:layout_marginStart="16dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="2dp"
+    android:background="@color/white"
     android:id="@+id/cardView">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/white"
         app:layout_constraintTop_toBottomOf="@id/first_row_header"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
