--- a/app/src/main/res/layout/activity_donate_detail.xml
+++ b/app/src/main/res/layout/activity_donate_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DonateDetail"
+    tools:context=".DonateDetailActivity"
     android:background="@color/white">
 
     <ImageView
