--- a/app/src/main/res/layout/activity_donate_detail.xml
+++ b/app/src/main/res/layout/activity_donate_detail.xml
@@ -14,7 +14,7 @@
         android:layout_height="250dp"
         android:background="@color/light_blue"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         style="@style/inter_bold"
@@ -33,6 +33,19 @@
 
     <TextView
         style="@style/inter_bold"
+        android:id="@+id/tv_tanggal_selesai"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tanggal Selesai"
+        android:textColor="@color/grey"
+        android:textAlignment="textEnd"
+        android:textSize="14sp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_main"/>
+
+    <TextView
+        style="@style/inter_bold"
         android:id="@+id/tv_description_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,12 +56,13 @@
         android:paddingEnd="16dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/tv_main"/>
-    
+
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_description_header"
-        app:layout_constraintBottom_toTopOf="@id/btn_donate_payment">
+        app:layout_constraintBottom_toTopOf="@id/btn_donate_payment"
+        app:layout_constraintTop_toBottomOf="@id/tv_description_header">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,22 +70,50 @@
             android:orientation="vertical">
 
             <TextView
-                style="@style/inter_regular"
                 android:id="@+id/tv_description_content"
+                style="@style/inter_regular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                android:text="Konten Deskripsi"
-                android:textColor="@color/grey"
-                android:textSize="14sp"
                 android:justificationMode="inter_character"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp" />
+                android:paddingEnd="16dp"
+                android:text="Konten Deskripsi"
+                android:textColor="@color/grey"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
     </ScrollView>
+
+    <Button
+        style="@style/lexend_semibold"
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Delete"
+        android:backgroundTint="#FF0000"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/img_main"
+        app:layout_constraintTop_toTopOf="@+id/img_main" />
+
+    <Button
+        style="@style/lexend_semibold"
+        android:id="@+id/btn_update"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="#FF9800"
+        android:text="Update"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/img_main"
+        app:layout_constraintTop_toTopOf="@+id/btn_delete" />
 
     <Button
         style="@style/lexend_semibold"
