--- a/app/src/main/res/layout/activity_pertemanan.xml
+++ b/app/src/main/res/layout/activity_pertemanan.xml
@@ -38,15 +38,13 @@
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
-    <!-- Filter RadioGroup -->
-    <!-- Filter RadioGroup -->
+    <!-- Filter hanya "Semua" dan "Diikuti" -->
     <RadioGroup
         android:id="@+id/radioFilter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="4dp"
         android:paddingHorizontal="16dp"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/header"
@@ -55,6 +53,7 @@
 
         <RadioButton
             android:id="@+id/radioSemua"
+            android:checked="true"
             style="@style/lexend_semibold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -72,26 +71,11 @@
             style="@style/lexend_semibold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
             android:layout_weight="1"
             android:background="@drawable/bg_radio_selected"
             android:button="@null"
             android:gravity="center"
             android:text="Diikuti"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
-
-        <RadioButton
-            android:id="@+id/radioBelumFollow"
-            style="@style/lexend_semibold"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/bg_radio_selected"
-            android:button="@null"
-            android:gravity="center"
-            android:text="Belum"
             android:textColor="@color/white"
             android:textSize="12sp" />
     </RadioGroup>
