--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -32,7 +32,7 @@ android:paddingVertical="8dp">
         android:textSize="12sp" />
 
     <TextView
-        android:id="@+id/tv_nama_restoran"
+        android:id="@+id/tv_nama_donor"
         style="@style/inter_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
