--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,7 @@
     </style>
 
     <!--  Image preview style : FoodList  -->
-    <style name="ImagePreviewFoodList" parent="">
+    <style name="ItemRecyclerViewImage" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">10dp</item>
     </style>
