--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="0dp">
+    android:padding="0dp"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,6 +54,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="15dp"
             android:text="Berbagi Akhir Pekan"
+            android:textColor="@color/grey"
             android:textStyle="bold"
             android:textSize="18sp" />
 
@@ -63,7 +65,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="20dp"
-            android:text="Deskripsi donasi panjang..." />
+            android:text="Deskripsi donasi panjang..."
+            android:textColor="@color/grey"/>
 
         <Button
             android:id="@+id/btnEdit"
