--- a/app/src/main/res/layout/item_postingan.xml
+++ b/app/src/main/res/layout/item_postingan.xml
@@ -7,7 +7,8 @@
     android:layout_marginLeft="15dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:cardBackgroundColor="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +31,7 @@
             android:text="Judul"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/grey"
             android:layout_marginBottom="8dp" />
 
         <TextView
@@ -38,6 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Detail post"
             android:textSize="14sp"
+            android:textColor="@color/grey"
             android:lineSpacingExtra="4dp"
             android:maxLines="3"
             android:ellipsize="end"/>
