--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -6,146 +7,154 @@
     tools:context=".HomeFragment"
     android:background="@color/white">
 
-    <!-- Konten utama -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <!-- Custom Search Bar -->
+    <com.example.proyekakhirpam.SearchBar
+        android:id="@+id/searchBar"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Custom Search Bar -->
-        <com.example.proyekakhirpam.SearchBar
-            android:layout_width="match_parent"
-            android:layout_height="60dp" />
-
-        <!-- Horizontal Scroll View untuk kartu greeting -->
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:scrollbars="none"
-            android:importantForAccessibility="no">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/greeting"
-                    android:layout_width="250dp"
-                    android:layout_height="130dp"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/card_greeting" />
-
-                <ImageView
-                    android:id="@+id/greeting2"
-                    android:layout_width="250dp"
-                    android:layout_height="130dp"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/card_greeting" />
-
-            </LinearLayout>
-
-        </HorizontalScrollView>
+    <!-- Horizontal Scroll View untuk kartu greeting -->
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:scrollbars="none"
+        android:importantForAccessibility="no"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginTop="25dp"
-            android:paddingHorizontal="28dp">
+            android:orientation="horizontal">
 
-            <!-- Item 1: Makanan -->
-            <LinearLayout
-                android:layout_width="0dp"
+            <ImageView
+                android:id="@+id/greeting"
+                android:layout_width="250dp"
+                android:layout_height="130dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/card_greeting" />
+
+            <ImageView
+                android:id="@+id/greeting2"
+                android:layout_width="250dp"
+                android:layout_height="130dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/card_greeting" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <!-- Kategori Ikon -->
+    <LinearLayout
+        android:id="@+id/kategoriLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="25dp"
+        android:paddingHorizontal="28dp"
+        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Makanan -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/makanan"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/makanan"/>
+
+            <TextView
+                android:id="@+id/judul_mkn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/makanan"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/makanan"/>
-
-                <TextView
-                    android:id="@+id/judul_mkn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Makanan"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey"/>
-            </LinearLayout>
-
-            <!-- Item 2: Sembako -->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/sembako"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/sembako"/>
-
-                <TextView
-                    android:id="@+id/judul_sbk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sembako"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey"/>
-            </LinearLayout>
-
-            <!-- Item 3: Galang Dana -->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/galang_dana"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/galang_dana"/>
-
-                <TextView
-                    android:id="@+id/judul_gd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Galang Dana"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey"/>
-            </LinearLayout>
+                android:text="Makanan"
+                android:textStyle="bold"
+                android:textColor="@color/grey"/>
         </LinearLayout>
 
-        <!-- RecyclerView untuk postingan -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycle_contact"
-            android:layout_width="match_parent"
+        <!-- Sembako -->
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:nestedScrollingEnabled="false"
-            tools:listitem="@layout/item_postingan"/>
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/sembako"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/sembako"/>
+
+            <TextView
+                android:id="@+id/judul_sbk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sembako"
+                android:textStyle="bold"
+                android:textColor="@color/grey"/>
+        </LinearLayout>
+
+        <!-- Galang Dana -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/galang_dana"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/galang_dana"/>
+
+            <TextView
+                android:id="@+id/judul_gd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Galang Dana"
+                android:textStyle="bold"
+                android:textColor="@color/grey"/>
+        </LinearLayout>
     </LinearLayout>
 
-    <!-- Tombol Buat Postingan di pojok kanan bawah -->
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_post"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingTop="16dp"
+        android:nestedScrollingEnabled="false"
+        tools:listitem="@layout/item_postingan"
+        app:layout_constraintTop_toBottomOf="@id/kategoriLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Tombol Tambah Postingan -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnTambah"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
         android:contentDescription="Tambah Postingan"
         android:src="@drawable/ic_add"
         app:tint="@color/white"
-        app:backgroundTint="@color/orange" />
-</FrameLayout>
+        app:backgroundTint="@color/orange"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
