--- a/app/src/main/res/layout/activity_form_postingan.xml
+++ b/app/src/main/res/layout/activity_form_postingan.xml
@@ -8,36 +8,35 @@
     android:background="@color/white"
     tools:context=".FormPostinganActivity">
 
-    <!-- Header -->
-    <View
+    <!-- Header dengan ikon back dan teks "Postingan" -->
+    <RelativeLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@drawable/bg_header"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Title -->
-    <TextView
-        android:id="@+id/title"
-        style="@style/inter_semibold"
-        android:layout_width="wrap_content"
+        android:layout_width="411dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="32dp"
-        android:text="Buat Postingan"
-        android:textColor="@color/grey"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/light_blue"
+        android:padding="20dp">
 
-    <!-- Back icon -->
-    <View
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/ic_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!-- Tombol Back -->
+        <ImageView
+            android:id="@+id/backIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_back" />
+
+        <!-- Judul "Postingan" -->
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tambah Postingan"
+            android:textColor="@android:color/black"
+            android:layout_toEndOf="@+id/backIcon"
+            android:layout_marginStart="20dp"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
     <!-- Isi scrollable -->
     <ScrollView
